gccida/g3/standard_80387_constant_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/standard_80387_constant_p/src/i386.c:4034:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v1) & 0xFFFFFFFB) != 2 && *( ( _DWORD *)&mode_class_0 + v1) != 8 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/standard_80387_constant_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/standard_80387_constant_p/src/i386.c:4034:31: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v1) & 0xFFFFFFFB) != 2 && *( ( _DWORD *)&mode_class_0 + v1) != 8 ) 
       ~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/standard_80387_constant_p/src/i386.c:4034:68: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v1) & 0xFFFFFFFB) != 2 && *( ( _DWORD *)&mode_class_0 + v1) != 8 ) 
                                                                   ^~~~~~~~~~~~
                                                                   mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/standard_80387_constant_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/standard_80387_constant_p/src/obj/i386.o] Error 1
